Minor change to wording.

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -33,12 +33,12 @@ subject to any constraints specified.
 .TP
 \fB\-o\fR, \fB\-\-format\fR
 Specify the information to be displayed.  
-The default format for jobs is "%.7i%9P%8j%8u%2t%.7l%.4p%#N", where "#" limits 
-output to the window size.
+The default format for jobs is "%.7i%9P%8j%8u%2t%.7l%.4p%#N", where "#" 
+represents a number limiting output to the window size.
 If the \fB\-\-long\fR option is specified, the default job format is 
 "%.7i%9P%8j%8u%8T%.7l%.10p%11S%11e%N".
-The default format for job steps is "%.10i%9P%8u%11S%#N", where "#" limits 
-output to the window size. 
+The default format for job steps is "%.10i%9P%8u%11S%#N", where "#" 
+represents a number limiting output to the window size.
 If the \fB\-\-long\fR option is specified, the default job step format 
 is "%.10i%9P%8u%11S%N".
 
